@@ -4,6 +4,8 @@ Version 8.18 (Unreleased)
 - Expanded resolution options to allow current and explicit versions.
 - Removed support for global dsyms
 - Added proguard support
+- Expanded ignore actions to include deltas and rates for both occurances and
+  users imapcted.
 
 Schema Changes
 ~~~~~~~~~~~~~~
